# election-orchestra

./: .ackrc  .env  .gitignore  .gitignore.license  .ort.yml  AUTHORS  HACKING.md  README.md  api.py  app.py  asyncproc.py  auth1.ini  auth2.ini  base_settings.py  create_db.py  demociphs.py  devenv.nix  devenv.yaml  director_jobs.py  docker-compose.yml  election-orchestra.kdev4  flake.nix  gendemo_ciphertexts.sh  keys_management.py  models.py  performer_jobs.py  public_api.py  pyproject.toml  reject_adapter.py  requirements.txt  second_settings.py  setup.py  sha256.py  sha512.py  taskqueue.py  utils.py  vmn.py
.config/: starship.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ort.yml
.reuse/: dep5
bench/: README.md  bench.sh  clear_disk.sh  cpu.gpi  disk.gpi  mem.gpi  mem.gpi.license  merge.sh  time.gpi
certs/selfsigned/: key.pem
certs/selfsigned2/: key.pem
create_election/: director_jobs.py  performer_jobs.py
election_orchestra/: app.py  keys_management.py  models.py  public_api.py  reject_adapter.py  second_settings.py  sha256.py  taskqueue.py  utils.py  vmn.py
election_orchestra/create_election/: director_jobs.py  performer_jobs.py
election_orchestra/tally_election/: director_jobs.py  performer_jobs.py
election_orchestra/tools/: create_tarball.py
scripts/: create-cert.sh  docker-entrypoint.sh
scripts/nginx/: nginx.conf
scripts/nginx/templates/: default.conf.template
scripts/nix/: utils.nix
tally_election/: director_jobs.py  performer_jobs.py
tools/: create_tarball.py
